--- a/YelpExplorer.Web/YelpExplorer.Web.csproj
+++ b/YelpExplorer.Web/YelpExplorer.Web.csproj
@@ -47,6 +47,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
       <Private>True</Private>
@@ -68,6 +72,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -77,6 +85,14 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Http.WebHost, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.3\lib\net45\System.Web.Http.WebHost.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -111,35 +127,30 @@
     <Reference Include="System.Web.Mvc">
       <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Net.Http.Formatting">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Http">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Http.WebHost">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.3\lib\net45\System.Web.Http.WebHost.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\app.js" />
     <Content Include="app\controllers\aboutCtrl.js" />
+    <Content Include="app\controllers\contactUsCtrl.js" />
     <Content Include="app\controllers\favoritesCtrl.js" />
     <Content Include="app\controllers\headerCtrl.js" />
     <Content Include="app\controllers\nearbyCtrl.js" />
     <Content Include="app\controllers\nearbyDetailCtrl.js" />
+    <Content Include="app\controllers\topicsCtrl.js" />
     <Content Include="app\controllers\userCtrl.js" />
     <Content Include="app\directives\ngUnique.js" />
     <Content Include="app\filters\placeNameCategoryFilter.js" />
     <Content Include="app\services\placesDataService.js" />
     <Content Include="app\services\placesService.js" />
+    <Content Include="app\services\topicsRepliesService.js" />
     <Content Include="app\views\about.html" />
+    <Content Include="app\views\contactUs.html" />
     <Content Include="app\views\favorites.html" />
     <Content Include="app\views\nearby.html" />
     <Content Include="app\views\nearbyDetail.html" />
+    <Content Include="app\views\newTopicView.html" />
+    <Content Include="app\views\singleTopicView.html" />
+    <Content Include="app\views\topicsView.html" />
     <Content Include="app\views\userprofile.html" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\site.css" />
@@ -182,9 +193,14 @@
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\PlacesController.cs" />
+    <Compile Include="Controllers\RepliesController.cs" />
+    <Compile Include="Controllers\TopicsController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Data\EntityConfiguration\BookmarkedPlaceConfiguration.cs" />
+    <Compile Include="Data\Repositories\IMessageBoardRepository.cs" />
+    <Compile Include="Data\Repositories\MessageBoardRepository.cs" />
     <Compile Include="Data\Repositories\YelpRepository.cs" />
     <Compile Include="Data\YelpContext.cs" />
     <Compile Include="Global.asax.cs">
@@ -196,7 +212,12 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BookmarkedPlace.cs" />
+    <Compile Include="Models\Contact.cs" />
+    <Compile Include="Models\Reply.cs" />
+    <Compile Include="Models\Topic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\MailService.cs" />
+    <Compile Include="Services\MockMailService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
