--- a/YelpExplorer.Web/packages.config
+++ b/YelpExplorer.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="angular-loading-bar" version="0.9.0" targetFramework="net452" />
   <package id="bootstrap" version="3.3.6" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="1.9.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
@@ -12,6 +13,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
